--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "NedduJS",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0"
